# okmain

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  lint-test.yml  python-docs.yml  python-release.yml
crates/okmain/: AGENTS.md  Cargo.toml  README.md
crates/okmain/benches/: kmeans.rs  sample.rs
crates/okmain/src/: debug_helpers.rs  kmeans.rs  lib.md  lib.rs  oklab_soa.rs  rng.rs  sample.rs  types.rs
crates/okmain/src/kmeans/: adaptive.rs  lloyds.rs  minibatch.rs  plain.py  plus_plus_init.rs  vanilla_llm.rs
crates/okmain_py/: AGENTS.md  Cargo.toml  README.md
crates/okmain_py/src/: lib.rs
crates/okmain_wasm/: Cargo.toml
crates/okmain_wasm/src/: lib.rs
python/: AGENTS.md  README.md  pyproject.toml
python/okmain/: __init__.py  _core.pyi
python/tests/: test_okmain.py
test_images/: .gitignore  README.md
