[project]
name = "okmain"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Dan Groshev", email = "dan@dgroshev.com" },
]
description = "OK main colors of your image"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["color", "image", "oklab", "palette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

dependencies = [
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/si14/okmain"
# TODO: docs!
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/si14/okmain"
"Bug Tracker" = "https://github.com/si14/okmain/issues"

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "twine"
]

[tool.maturin]
manifest-path = "../crates/okmain_py/Cargo.toml"
module-name = "okmain._core"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.mypy]
python_version = "3.12"
strict = true
