[package]
name = "okmain_py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "OK main colors of your image (Rust-Python bridge)"
homepage = "https://github.com/si14/okmain"
repository = "https://github.com/si14/okmain/tree/main/crates/okmain_py"
readme = "README.md"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
okmain = { path = "../okmain", features = ["unstable"] }
pyo3 = { version = "0.28", features = ["abi3-py312"] }
