[package]
name = "okmain_wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
okmain = { path = "../okmain" }
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = { version = "0.1" }
